--- a/NewTests.ipynb
+++ b/NewTests.ipynb
@@ -176,7 +176,9 @@
    "execution_count": 5,
    "outputs": [],
    "source": [
-    "model = overall.make_model(inp_shape)"
+    "model = overall.make_model(inp_shape)\n",
+    "\n",
+    "\n"
    ],
    "metadata": {
     "collapsed": false,
@@ -188,32 +190,6 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "outputs": [],
-   "source": [
-    "out, h = model(example)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "outputs": [],
-   "source": [],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
    "outputs": [],
    "source": [
     "from factories_old import Network, Linear, Seq, ExecPath, Conv3, Conv2, ConvPath, Disc, LIF, ReLU, LSTM, PotOut\n"
@@ -227,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "outputs": [],
    "source": [
     "\n",
@@ -253,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "outputs": [],
    "source": [
     "old_model = make_model()"
@@ -267,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "outputs": [
     {
      "name": "stdout",
@@ -300,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "outputs": [
     {
      "name": "stdout",
@@ -333,19 +309,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "OuterModule(\n  (inner): SequentialModule(\n    (mlist): ModuleList(\n      (0): SequentialModule(\n        (mlist): ModuleList(\n          (0): RecurrentWrapper(\n            (inner): ConvFSModule(\n              (inner): Conv3d(1, 32, kernel_size=(4, 8, 8), stride=(1, 4, 4))\n            )\n          )\n          (1): StatelessWrapper(\n            (inner): DiscontinuousNeuron()\n          )\n          (2): StatelessWrapper(\n            (inner): Conv2d(32, 64, kernel_size=(4, 4), stride=(2, 2))\n          )\n          (3): StatelessWrapper(\n            (inner): DiscontinuousNeuron()\n          )\n          (4): StatelessWrapper(\n            (inner): Conv2d(64, 64, kernel_size=(3, 3), stride=(1, 1))\n          )\n          (5): StatelessWrapper(\n            (inner): DiscontinuousNeuron()\n          )\n        )\n      )\n      (1): OuterNetworkModule(\n        (layers): ModuleDict(\n          (c0): NestedNetworkModule(\n            (layers): ModuleDict(\n              (output): SequentialModule(\n                (mlist): ModuleList(\n                  (0): StatelessWrapper(\n                    (inner): Linear(in_features=3584, out_features=512, bias=True)\n                  )\n                  (1): RecurrentWrapper(\n                    (inner): LIFNeuron()\n                  )\n                )\n              )\n            )\n          )\n        )\n      )\n      (2): StatelessWrapper(\n        (inner): Linear(in_features=512, out_features=3, bias=True)\n      )\n    )\n  )\n)"
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "execution_count": 11,
+   "outputs": [],
    "source": [
-    "model"
+    "with torch.no_grad():\n",
+    "    for i in range(len(list(model.named_parameters()))):\n",
+    "        par1 = list(model.named_parameters())[i][1]\n",
+    "        par1.data = list(old_model.named_parameters())[i][1].data.view(par1.shape)"
    ],
    "metadata": {
     "collapsed": false,
@@ -357,6 +327,126 @@
   {
    "cell_type": "code",
    "execution_count": 12,
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/eric/.local/lib/python3.9/site-packages/torch/tensor.py:775: UserWarning: Named tensors and all their associated APIs are an experimental feature and subject to change. Please do not use them for anything important until they are released as stable. (Triggered internally at  /pytorch/c10/core/TensorImpl.h:848.)\n",
+      "  return super(Tensor, self).refine_names(names)\n"
+     ]
+    }
+   ],
+   "source": [
+    "out, h = model(example)\n",
+    "\n",
+    "out_old, _ = old_model(example.refine_names('time', 'batch', 'C', 'H', 'W'), old_model.get_initial_state(batch))"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "tensor(True)"
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "torch.isclose(out_old.rename(None), out).all()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "add() received an invalid combination of arguments - got (tuple), but expected (Tensor input, Tensor other, *, Number alpha, Tensor out)",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31mTypeError\u001B[0m                                 Traceback (most recent call last)",
+      "\u001B[0;32m<ipython-input-8-e0105795afc1>\u001B[0m in \u001B[0;36m<module>\u001B[0;34m\u001B[0m\n\u001B[0;32m----> 1\u001B[0;31m \u001B[0mtorch\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0madd\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0mtorch\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mones\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0;36m1\u001B[0m\u001B[0;34m,\u001B[0m\u001B[0;36m2\u001B[0m\u001B[0;34m,\u001B[0m\u001B[0;36m3\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m,\u001B[0m\u001B[0mtorch\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mones\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0;36m1\u001B[0m\u001B[0;34m,\u001B[0m\u001B[0;36m2\u001B[0m\u001B[0;34m,\u001B[0m\u001B[0;36m3\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m,\u001B[0m\u001B[0mtorch\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mones\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0;36m1\u001B[0m\u001B[0;34m,\u001B[0m\u001B[0;36m2\u001B[0m\u001B[0;34m,\u001B[0m\u001B[0;36m3\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0m",
+      "\u001B[0;31mTypeError\u001B[0m: add() received an invalid combination of arguments - got (tuple), but expected (Tensor input, Tensor other, *, Number alpha, Tensor out)"
+     ]
+    }
+   ],
+   "source": [
+    "torch.add()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "tensor([[[3., 3., 3.],\n         [3., 3., 3.]]])"
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sum((torch.ones(1,2,3),torch.ones(1,2,3),torch.ones(1,2,3)))"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "tensor([[[3., 3., 3.],\n         [3., 3., 3.]]])"
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "torch.sum(torch.stack((torch.ones(1,2,3),torch.ones(1,2,3),torch.ones(1,2,3))), dim=0)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "outputs": [],
    "source": [],
    "metadata": {
