added some basic nn and small fix

--- a/NewTests.ipynb
+++ b/NewTests.ipynb
@@ -195,7 +195,8 @@
     "#                              prepare_input='flatten', shape_change=(lambda in_shape, out_size: (out_size,)))\n",
     "#Disc = custom.register_non_recurrent(module_class=DiscontinuousNeuron, prepare_input='flatten', shape_change='none')\n",
     "#ConvFS = custom.register_recurrent(module_class=ConvFSModule, prepare_input='keep', single_step=False, unroll_full_state=False, shape_change='auto')\n",
-    "#do fs_conv with dim changes"
+    "#do fs_conv with dim changes\n",
+    "from rnnbuilder.nn import ReLU, Conv2d, Linear"
    ],
    "metadata": {
     "collapsed": false,
@@ -232,9 +233,10 @@
     "    Conv2({'out_channels': 64, 'kernel_size': 4, 'stride': 2}, CONV_NEURON),\n",
     "    Conv2({'out_channels': 64, 'kernel_size': 3, 'stride': 1}, CONV_NEURON)])'''\n",
     "# TODO: neurons\n",
-    "conv_stack = ml.Sequential(ConvFS(out_channels=32, kernel_size=8, stride=4, frame_stack=FRAME_STACK), Disc(disc_config),\n",
-    "                     Conv2d(out_channels=64, kernel_size=4, stride=2), Disc(disc_config),\n",
-    "                     Conv2d(out_channels=64, kernel_size=3, stride=1), Disc(disc_config))\n",
+    "conv_neuron = ReLU()#Disc(disc_config)\n",
+    "conv_stack = ml.Sequential(ConvFS(out_channels=32, kernel_size=8, stride=4, frame_stack=FRAME_STACK), conv_neuron,\n",
+    "                     Conv2d(out_channels=64, kernel_size=4, stride=2), conv_neuron,\n",
+    "                     Conv2d(out_channels=64, kernel_size=3, stride=1), conv_neuron)\n",
     "\n",
     "ll = ml.Network()\n",
     "ll.output = ml.Placeholder()\n",
@@ -362,15 +364,15 @@
      "text": [
       "inner.mlist.0.mlist.0.inner.inner.weight torch.Size([32, 1, 4, 8, 8])\n",
       "inner.mlist.0.mlist.0.inner.inner.bias torch.Size([32])\n",
-      "inner.mlist.0.mlist.2.inner.inner.weight torch.Size([64, 32, 4, 4])\n",
-      "inner.mlist.0.mlist.2.inner.inner.bias torch.Size([64])\n",
-      "inner.mlist.0.mlist.4.inner.inner.weight torch.Size([64, 64, 3, 3])\n",
-      "inner.mlist.0.mlist.4.inner.inner.bias torch.Size([64])\n",
-      "inner.mlist.1.layers.c0.layers.output.mlist.0.inner.inner.weight torch.Size([512, 3584])\n",
-      "inner.mlist.1.layers.c0.layers.output.mlist.0.inner.inner.bias torch.Size([512])\n",
+      "inner.mlist.0.mlist.2.inner.weight torch.Size([64, 32, 4, 4])\n",
+      "inner.mlist.0.mlist.2.inner.bias torch.Size([64])\n",
+      "inner.mlist.0.mlist.4.inner.weight torch.Size([64, 64, 3, 3])\n",
+      "inner.mlist.0.mlist.4.inner.bias torch.Size([64])\n",
+      "inner.mlist.1.layers.c0.layers.output.mlist.0.inner.weight torch.Size([512, 3584])\n",
+      "inner.mlist.1.layers.c0.layers.output.mlist.0.inner.bias torch.Size([512])\n",
       "inner.mlist.1.layers.c0.layers.output.mlist.1.inner.initial_mem torch.Size([512])\n",
-      "inner.mlist.2.inner.inner.weight torch.Size([3, 512])\n",
-      "inner.mlist.2.inner.inner.bias torch.Size([3])\n"
+      "inner.mlist.2.inner.weight torch.Size([3, 512])\n",
+      "inner.mlist.2.inner.bias torch.Size([3])\n"
      ]
     }
    ],
@@ -478,7 +480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "outputs": [],
    "source": [
     "n = ml.Network()"
@@ -492,7 +494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "outputs": [],
    "source": [
     "n.test = ml.Layer(n.input, [])"
@@ -506,7 +508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "outputs": [],
    "source": [
     "n.test2 = n.test.stack(n.input).apply([])"
@@ -520,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "outputs": [],
    "source": [
     "n.output = n.test.sum(n.test2)\n"
@@ -563,23 +565,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "'list' object has no attribute '_shape_change'",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[0;31mAttributeError\u001B[0m                            Traceback (most recent call last)",
-      "\u001B[0;32m<ipython-input-22-6cea3f278078>\u001B[0m in \u001B[0;36m<module>\u001B[0;34m\u001B[0m\n\u001B[0;32m----> 1\u001B[0;31m \u001B[0mn\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mmake_model\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0;36m3\u001B[0m\u001B[0;34m,\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0m",
-      "\u001B[0;32m~/PycharmProjects/rnnbuilder/library/src/rnnbuilder/base/__init__.py\u001B[0m in \u001B[0;36mmake_model\u001B[0;34m(self, in_shape)\u001B[0m\n\u001B[1;32m     10\u001B[0m         \u001B[0mprevious\u001B[0m \u001B[0mcalls\u001B[0m \u001B[0;32mwith\u001B[0m \u001B[0mits\u001B[0m \u001B[0mown\u001B[0m \u001B[0mparameters\u001B[0m\u001B[0;34m.\u001B[0m \u001B[0mThis\u001B[0m \u001B[0mapplies\u001B[0m \u001B[0mto\u001B[0m \u001B[0msub\u001B[0m\u001B[0;34m-\u001B[0m\u001B[0mmodules\u001B[0m \u001B[0;32mas\u001B[0m \u001B[0mwell\u001B[0m\u001B[0;34m.\u001B[0m \u001B[0mParameter\u001B[0m \u001B[0msharing\u001B[0m \u001B[0;32mis\u001B[0m \u001B[0;32mnot\u001B[0m \u001B[0msupported\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m     11\u001B[0m         \"\"\"\n\u001B[0;32m---> 12\u001B[0;31m         \u001B[0;32mreturn\u001B[0m \u001B[0mOuterModule\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0mself\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0m_assemble_module\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0min_shape\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0;32mFalse\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0m\u001B[1;32m     13\u001B[0m \u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m     14\u001B[0m     \u001B[0;32mdef\u001B[0m \u001B[0m_assemble_module\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0mself\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0min_shape\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0munrolled\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m:\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n",
-      "\u001B[0;32m~/PycharmProjects/rnnbuilder/library/src/rnnbuilder/__init__.py\u001B[0m in \u001B[0;36m_assemble_module\u001B[0;34m(self, in_shape, unrolled)\u001B[0m\n\u001B[1;32m    299\u001B[0m             \u001B[0;32mif\u001B[0m \u001B[0mph\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0minitial_value\u001B[0m\u001B[0;34m:\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m    300\u001B[0m                 \u001B[0minitial_values\u001B[0m\u001B[0;34m[\u001B[0m\u001B[0mph_name\u001B[0m\u001B[0;34m]\u001B[0m \u001B[0;34m=\u001B[0m \u001B[0mph\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0minitial_value\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0;32m--> 301\u001B[0;31m         \u001B[0mout_shapes\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0min_shapes\u001B[0m \u001B[0;34m=\u001B[0m \u001B[0mself\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0m_compute_shapes\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0min_shape\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0m\u001B[1;32m    302\u001B[0m         \u001B[0mph_lookup\u001B[0m \u001B[0;34m=\u001B[0m \u001B[0;34m{\u001B[0m\u001B[0mph_name\u001B[0m\u001B[0;34m:\u001B[0m \u001B[0mself\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0m_reverse_laph\u001B[0m\u001B[0;34m[\u001B[0m\u001B[0mph\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0m_get_layer\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m]\u001B[0m \u001B[0;32mfor\u001B[0m \u001B[0mph_name\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0mph\u001B[0m \u001B[0;32min\u001B[0m \u001B[0mself\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0m_ph\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mitems\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m}\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m    303\u001B[0m         input_names = {layer_name: {self._reverse_laph[inp_lay] for inp_lay in layer._inputs} for layer_name, layer in\n",
-      "\u001B[0;32m~/PycharmProjects/rnnbuilder/library/src/rnnbuilder/__init__.py\u001B[0m in \u001B[0;36m_compute_shapes\u001B[0;34m(self, in_shape)\u001B[0m\n\u001B[1;32m    217\u001B[0m                 \u001B[0minp_shape\u001B[0m \u001B[0;34m=\u001B[0m \u001B[0mshapes\u001B[0m\u001B[0;34m[\u001B[0m\u001B[0mnext\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0miter\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0minputs\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m]\u001B[0m \u001B[0;32mif\u001B[0m \u001B[0mlen\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0minputs\u001B[0m\u001B[0;34m)\u001B[0m \u001B[0;34m==\u001B[0m \u001B[0;36m1\u001B[0m \u001B[0;32melse\u001B[0m \u001B[0mshape_sum\u001B[0m\u001B[0;31m \u001B[0m\u001B[0;31m\\\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m    218\u001B[0m                     \u001B[0;34m(\u001B[0m\u001B[0;34m[\u001B[0m\u001B[0mshapes\u001B[0m\u001B[0;34m[\u001B[0m\u001B[0mlayer_name\u001B[0m\u001B[0;34m]\u001B[0m \u001B[0;32mfor\u001B[0m \u001B[0mlayer_name\u001B[0m \u001B[0;32min\u001B[0m \u001B[0minputs\u001B[0m\u001B[0;34m]\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0;32m--> 219\u001B[0;31m                 \u001B[0mshapes\u001B[0m\u001B[0;34m[\u001B[0m\u001B[0mlayer_name\u001B[0m\u001B[0;34m]\u001B[0m \u001B[0;34m=\u001B[0m \u001B[0mself\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0m_layers\u001B[0m\u001B[0;34m[\u001B[0m\u001B[0mlayer_name\u001B[0m\u001B[0;34m]\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mfactory\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0m_shape_change\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0minp_shape\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0m\u001B[1;32m    220\u001B[0m                 \u001B[0;32mif\u001B[0m \u001B[0mshapes\u001B[0m\u001B[0;34m[\u001B[0m\u001B[0mlayer_name\u001B[0m\u001B[0;34m]\u001B[0m \u001B[0;32mis\u001B[0m \u001B[0;32mnot\u001B[0m \u001B[0;32mNone\u001B[0m\u001B[0;34m:\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m    221\u001B[0m                     \u001B[0mfound_new\u001B[0m \u001B[0;34m=\u001B[0m \u001B[0mlayer_name\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n",
-      "\u001B[0;31mAttributeError\u001B[0m: 'list' object has no attribute '_shape_change'"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "\n",
     "n.make_model((3,))"
