lstm works, added list input, graph in documentation

--- a/NewTests.ipynb
+++ b/NewTests.ipynb
@@ -176,7 +176,21 @@
     "        x = self.inner(x)\n",
     "        return x.permute(2, 0, 1, 3, 4), ()\n",
     "\n",
-    "ConvFS = custom.register_recurrent(module_class=ConvFSModule, flatten_input=False, single_step=False, unroll_full_state=False)"
+    "ConvFS = custom.register_recurrent(module_class=ConvFSModule, flatten_input=False, single_step=False, unroll_full_state=False)\n",
+    "\n",
+    "from functools import reduce\n",
+    "import operator\n",
+    "def prod(iterable):\n",
+    "    return reduce(operator.mul, iterable, 1)\n",
+    "\n",
+    "class HadamardModule(ml.custom.CustomModule):\n",
+    "    def get_out_shape(self, in_shapes):\n",
+    "        return in_shapes[0]\n",
+    "\n",
+    "    def forward(self, inputs, _):\n",
+    "        return prod(inputs), ()\n",
+    "\n",
+    "Hadamard = custom.register_recurrent(module_class=HadamardModule, flatten_input=False, single_step=False, unroll_full_state=False)\n"
    ],
    "metadata": {
     "collapsed": false,
